--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,46 @@
 annotated-types==0.7.0
-anyio @ file:///home/conda/feedstock_root/build_artifacts/anyio_1726753373685/work
+anyio==4.5.0
+build==1.2.2.post1
 cachetools==5.5.0
-certifi @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_0ecs_ou28u/croot/certifi_1725551740278/work/certifi
+certifi==2024.8.30
 charset-normalizer==3.4.0
-click @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_61srkg7e2e/croot/click_1698129815327/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
-h11 @ file:///home/conda/feedstock_root/build_artifacts/h11_1664132893548/work
-h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1634280454336/work
+click==8.1.7
+exceptiongroup==1.2.2
+h11==0.14.0
+h2==4.1.0
 hpack==4.0.0
 html2text==2024.2.26
-httpcore @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_httpcore_1731707562/work
-httpx @ file:///home/conda/feedstock_root/build_artifacts/httpx_1724778349782/work
-hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1619110129307/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1726459485162/work
-notion-client @ file:///home/conda/feedstock_root/build_artifacts/notion-client_1718445573630/work
+httpcore==1.0.7
+httpx==0.27.2
+hyperframe==6.0.1
+idna==3.10
+importlib-metadata==8.5.0
+libcxx==14.0.6
+libffi==3.4.4
+ncurses==6.4
+notion-client==2.2.1
+openssl==3.4.0
+packaging==24.2
+pip==24.2
+pip-tools==7.4.1
 pydantic==2.10.3
-pydantic_core==2.27.1
-PyJWT==2.8.0
-python-dotenv @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_3ahu1_p9lb/croot/python-dotenv_1669132571851/work
-pytz @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a4b76c83ik/croot/pytz_1713974318928/work
+pydantic-core==2.27.1
+pyjwt==2.8.0
+pyproject-hooks==1.2.0
+python==3.8.20
+python-dotenv==0.21.0
+pytz==2024.1
+readline==8.2
 requests==2.32.3
-sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1708952932303/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
+setuptools==75.1.0
+sniffio==1.3.1
+sqlite==3.45.3
+tk==8.6.14
+tomli==2.2.1
+typing_extensions==4.12.2
 urllib3==2.2.3
+wheel==0.44.0
+xz==5.4.6
 zhipuai==2.1.5.20241204
+zipp==3.20.2
+zlib==1.2.13
