--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 annotated-types==0.7.0
-anyio==4.5.0
+anyio==4.5.2
 build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.8.30
@@ -11,36 +11,23 @@ h2==4.1.0
 hpack==4.0.0
 html2text==2024.2.26
 httpcore==1.0.7
-httpx==0.27.2
+httpx==0.28.0
 hyperframe==6.0.1
 idna==3.10
-importlib-metadata==8.5.0
-libcxx==14.0.6
-libffi==3.4.4
-ncurses==6.4
+importlib_metadata==8.5.0
 notion-client==2.2.1
-openssl==3.4.0
 packaging==24.2
-pip==24.2
 pip-tools==7.4.1
 pydantic==2.10.3
-pydantic-core==2.27.1
-pyjwt==2.8.0
-pyproject-hooks==1.2.0
-python==3.8.20
-python-dotenv==0.21.0
-pytz==2024.1
-readline==8.2
+pydantic_core==2.27.1
+PyJWT==2.8.0
+pyproject_hooks==1.2.0
+python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
-setuptools==75.1.0
 sniffio==1.3.1
-sqlite==3.45.3
-tk==8.6.14
 tomli==2.2.1
 typing_extensions==4.12.2
 urllib3==2.2.3
-wheel==0.44.0
-xz==5.4.6
 zhipuai==2.1.5.20241204
 zipp==3.20.2
-zlib==1.2.13
